force-app/main/default/objects/Sentiment_Map_Aggregate__mdt/Sentiment_Map_Aggregate__mdt.object-meta.xml
<CustomObject>
    <label>Sentiment Map Aggregate</label>
    <pluralLabel>Sentiment Map Aggregates</pluralLabel>
</CustomObject>