force-app/main/default/objects/Sentiment_Map_Aggregate__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KPI</fullName>
                <default>true</default>
                <label>KPI</label>
            </value>
            <value>
                <fullName>Region</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>