force-app/main/default/objects/Sentiment_Map_Aggregate__mdt/fields/Legend_Theme__c.field-meta.xml
<CustomField>
    <fullName>Legend_Theme__c</fullName>
    <label>Legend Theme</label>
    <referenceTo>Legend_Theme__mdt</referenceTo>
    <relationshipLabel>Sentiment Map Aggregates</relationshipLabel>
    <relationshipName>sentiment_map_Aggregates</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>